Added code to books.js which gets all books from the DB. Added code in index.ejs as an attempt to display all books.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb://localhost/bookstore
+DATABASE_URL=mongodb+srv://gmart252:pass123@bookstore-h47q3.mongodb.net/BookstoreDB?retryWrites=true&w=majority
