--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/mm4r71n/BookStore#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-handlebars": "^3.1.0",
     "mongoose": "^5.7.1"
   },
   "devDependencies": {
