--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
   },
   "homepage": "https://github.com/mm4r71n/BookStore#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-handlebars": "^3.1.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.0",
+    "express-sessions": "^1.0.6",
     "express-validator": "^6.2.0",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
